Studied OOP in Python

--- a/OOP/OOP.ipynb
+++ b/OOP/OOP.ipynb
@@ -1,106 +1,346 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "38566739-b7ef-45b3-b433-f16ba8a2f339",
-   "metadata": {},
-   "source": [
-    "#### classes & objects"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a9269142-0478-46a1-acb5-56c0f7eb0568",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.0\n"
-     ]
+      "cell_type": "markdown",
+      "id": "38566739-b7ef-45b3-b433-f16ba8a2f339",
+      "metadata": {
+        "id": "38566739-b7ef-45b3-b433-f16ba8a2f339"
+      },
+      "source": [
+        "#### **classes & objects**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "a9269142-0478-46a1-acb5-56c0f7eb0568",
+      "metadata": {
+        "id": "a9269142-0478-46a1-acb5-56c0f7eb0568",
+        "outputId": "6a47e2ef-e504-40c7-c1d5-19301ddaae12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Vector2D:\n",
+        "    def __init__(self, x, y):        # constructor\n",
+        "        self.x = x                   # instance attributes\n",
+        "        self.y = y\n",
+        "\n",
+        "    def norm(self):                  # instance method\n",
+        "        return (self.x**2 + self.y**2) ** 0.5\n",
+        "\n",
+        "v = Vector2D(3, 4)                   # object (instance)\n",
+        "print(v.norm())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9ae54849-7be4-470a-93a7-e270f2da8284",
+      "metadata": {
+        "id": "9ae54849-7be4-470a-93a7-e270f2da8284"
+      },
+      "source": [
+        "- class defines a blueprint.\n",
+        "- __init__ runs at construction.\n",
+        "- self is the instance being operated on."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "51aa8ba9-20f1-4c2c-8490-c9166928a94f",
+      "metadata": {
+        "id": "51aa8ba9-20f1-4c2c-8490-c9166928a94f"
+      },
+      "source": [
+        "#### **instance vs class attributes**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "5d167e2b-339a-42fd-ad7d-e84996f9008a",
+      "metadata": {
+        "id": "5d167e2b-339a-42fd-ad7d-e84996f9008a"
+      },
+      "outputs": [],
+      "source": [
+        "class TokenCounter:\n",
+        "    model_name = \"tiny-bert\"        # class attribute (shared)\n",
+        "    def __init__(self):\n",
+        "        self.count = 0              # instance attribute\n",
+        "\n",
+        "    def add(self, n):\n",
+        "        self.count += n\n",
+        "\n",
+        "a = TokenCounter(); b = TokenCounter()\n",
+        "a.add(3); b.add(7)\n",
+        "TokenCounter.model_name = \"mini-bert\"   # affects all unless shadowed"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **encapsulation & properties**"
+      ],
+      "metadata": {
+        "id": "BGaMPhOiMd20"
+      },
+      "id": "BGaMPhOiMd20"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Keep internals private-ish with a leading underscore, expose a clean API."
+      ],
+      "metadata": {
+        "id": "bnCUdKX6MolZ"
+      },
+      "id": "bnCUdKX6MolZ"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "08177b09-c567-47d6-accf-c3629bd390c2",
+      "metadata": {
+        "id": "08177b09-c567-47d6-accf-c3629bd390c2"
+      },
+      "outputs": [],
+      "source": [
+        "class LearningRate:\n",
+        "    def __init__(self, lr: float):\n",
+        "        self._lr = lr\n",
+        "\n",
+        "    @property\n",
+        "    def value(self):\n",
+        "        return self._lr\n",
+        "\n",
+        "    @value.setter\n",
+        "    def value(self, v):\n",
+        "        if v <= 0:\n",
+        "            raise ValueError(\"lr must be > 0\")\n",
+        "        self._lr = v"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**@classmethod and @staticmethod**"
+      ],
+      "metadata": {
+        "id": "QmhJISj3NBLQ"
+      },
+      "id": "QmhJISj3NBLQ"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Experiment:\n",
+        "    def __init__(self, name, seed=42):\n",
+        "        self.name, self.seed = name, seed\n",
+        "\n",
+        "    @classmethod\n",
+        "    def from_config(cls, cfg: dict):\n",
+        "        return cls(cfg[\"name\"], cfg.get(\"seed\", 42))  # alternative constructor\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def is_valid_name(name):\n",
+        "        return name.isidentifier()"
+      ],
+      "metadata": {
+        "id": "mHknTWiEMtds"
+      },
+      "id": "mHknTWiEMtds",
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**__repr__, equality, hashing (useful for debugging & dict/set keys)**"
+      ],
+      "metadata": {
+        "id": "AFeleasRNJoV"
+      },
+      "id": "AFeleasRNJoV"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Sample:\n",
+        "    def __init__(self, text, label):\n",
+        "        self.text, self.label = text, label\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        return f\"Sample(text={self.text[:10]!r}..., label={self.label!r})\"\n",
+        "\n",
+        "    def __eq__(self, other):\n",
+        "        return isinstance(other, Sample) and (self.text, self.label) == (other.text, other.label)\n",
+        "\n",
+        "    def __hash__(self):\n",
+        "        return hash((self.text, self.label))"
+      ],
+      "metadata": {
+        "id": "tHisj4bHNF54"
+      },
+      "id": "tHisj4bHNF54",
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**dataclasses (boilerplate killer)**"
+      ],
+      "metadata": {
+        "id": "Rs0RPHQwNPnR"
+      },
+      "id": "Rs0RPHQwNPnR"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from dataclasses import dataclass\n",
+        "\n",
+        "@dataclass\n",
+        "class Review:\n",
+        "    text: str\n",
+        "    label: int\n",
+        "    source: str = \"imdb\"   # default"
+      ],
+      "metadata": {
+        "id": "_eAKS5aSNNQV"
+      },
+      "id": "_eAKS5aSNNQV",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**inheritance vs composition**"
+      ],
+      "metadata": {
+        "id": "5AQ-K6XfNU1C"
+      },
+      "id": "5AQ-K6XfNU1C"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Model:\n",
+        "    def train(self, X, y): ...\n",
+        "    def predict(self, X): ...\n",
+        "\n",
+        "class LinearModel(Model):\n",
+        "    def train(self, X, y): print(\"fitting weights …\")\n",
+        "    def predict(self, X):  return [0]*len(X)"
+      ],
+      "metadata": {
+        "id": "ZMCCCuWXNS0A"
+      },
+      "id": "ZMCCCuWXNS0A",
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Pipeline:\n",
+        "    def __init__(self, tokenizer, vectorizer, classifier):\n",
+        "        self.tokenizer = tokenizer\n",
+        "        self.vectorizer = vectorizer\n",
+        "        self.classifier = classifier\n",
+        "\n",
+        "    def fit(self, texts, y):\n",
+        "        tokens = [self.tokenizer(t) for t in texts]\n",
+        "        X = self.vectorizer.fit_transform(tokens)\n",
+        "        self.classifier.fit(X, y)\n",
+        "        return self\n",
+        "\n",
+        "    def predict(self, texts):\n",
+        "        tokens = [self.tokenizer(t) for t in texts]\n",
+        "        X = self.vectorizer.transform(tokens)\n",
+        "        return self.classifier.predict(X)"
+      ],
+      "metadata": {
+        "id": "hFbWcXoyNcel"
+      },
+      "id": "hFbWcXoyNcel",
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**polymorphism & duck typing**"
+      ],
+      "metadata": {
+        "id": "ghXIbtlmNUeL"
+      },
+      "id": "ghXIbtlmNUeL"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Different classes share the same interface:"
+      ],
+      "metadata": {
+        "id": "KmMLKtPHNiol"
+      },
+      "id": "KmMLKtPHNiol"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class WhitespaceTokenizer:\n",
+        "    def __call__(self, text): return text.split()\n",
+        "\n",
+        "class CharTokenizer:\n",
+        "    def __call__(self, text): return list(text)\n",
+        "\n",
+        "def token_count(tokenizer, text):\n",
+        "    return len(tokenizer(text))   # works for both (duck typing)"
+      ],
+      "metadata": {
+        "id": "gJo_E6CUNgKX"
+      },
+      "id": "gJo_E6CUNgKX",
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-NqDX1uQNmY9"
+      },
+      "id": "-NqDX1uQNmY9",
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "class Vector2D:\n",
-    "    def __init__(self, x, y):        # constructor\n",
-    "        self.x = x                   # instance attributes\n",
-    "        self.y = y\n",
-    "\n",
-    "    def norm(self):                  # instance method\n",
-    "        return (self.x**2 + self.y**2) ** 0.5\n",
-    "\n",
-    "v = Vector2D(3, 4)                   # object (instance)\n",
-    "print(v.norm())                      "
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "id": "9ae54849-7be4-470a-93a7-e270f2da8284",
-   "metadata": {},
-   "source": [
-    "- class defines a blueprint.\n",
-    "- __init__ runs at construction.\n",
-    "- self is the instance being operated on."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51aa8ba9-20f1-4c2c-8490-c9166928a94f",
-   "metadata": {},
-   "source": [
-    "#### instance vs class attributes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "5d167e2b-339a-42fd-ad7d-e84996f9008a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TokenCounter:\n",
-    "    model_name = \"tiny-bert\"        # class attribute (shared)\n",
-    "    def __init__(self):\n",
-    "        self.count = 0              # instance attribute\n",
-    "\n",
-    "    def add(self, n):\n",
-    "        self.count += n\n",
-    "\n",
-    "a = TokenCounter(); b = TokenCounter()\n",
-    "a.add(3); b.add(7)\n",
-    "TokenCounter.model_name = \"mini-bert\"   # affects all unless shadowed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08177b09-c567-47d6-accf-c3629bd390c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python [conda env:base] *",
-   "language": "python",
-   "name": "conda-base-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
