Array Creation & Shape cheatsheet completed

--- a/numpy/array_creation_shape.ipynb
+++ b/numpy/array_creation_shape.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "AltElemMWxKp"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
         "id": "BgXzQ8veXDtJ",
         "outputId": "758443da-f475-40a3-f859-8e54d7e82356"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         "id": "3QE3IRM9XFT6",
         "outputId": "b04b47ce-45e5-4f35-efef-1a01bbb75752"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "hftmt_tWXeqJ",
         "outputId": "dd699351-4cb1-47d3-df48-9e9b9413ab4f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "id": "iWoZFl_EX8Z5",
         "outputId": "5e3aa6be-a915-4c4e-a9c5-c038ef3fe9d1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "id": "fpJV0a3-YLK6",
         "outputId": "e1a424cd-abe6-4084-a061-e6653c55315e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
         "id": "NSp5GyLDYKRr",
         "outputId": "2cd05f84-b53b-42be-9edf-30f4a6fb1e34"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +283,7 @@
         "id": "G6BA3ktjYW0q",
         "outputId": "f64c6fe2-1ab9-4394-960e-06f1298dcb6f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +330,7 @@
         "id": "2y3IZCk5Yo6P",
         "outputId": "52d0604f-3efc-4d17-ff9c-bc417629d884"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,7 +367,7 @@
         "id": "Wsr5YxP4YwAW",
         "outputId": "bafc9c94-7cc9-4b96-ffa4-eebbafa03c53"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +400,7 @@
         "id": "D5wFhp5EY-Na",
         "outputId": "83a7d350-467d-4fa1-ca1a-bafd44ef766e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,13 +428,190 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**np.reshape() - Change shape without changing data**"
+      ],
       "metadata": {
         "id": "hVE-2bkfZAtE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([1, 2, 3, 4, 5, 6])\n",
+        "X = x.reshape((2, 3))\n",
+        "print(X)"
+      ],
+      "metadata": {
+        "id": "gA2D1d3xZxJW",
+        "outputId": "7eb0a7bc-8e47-4ce7-e793-d12780ec6ead",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Converted a 1D vector into a 2×3 matrix\n",
+        "\n",
+        "- CNN inputs\n",
+        "\n",
+        "- Batch formatting\n",
+        "\n",
+        "- Feature matrices"
+      ],
+      "metadata": {
+        "id": "V_K3uLvQZzOY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**np.ravel() - Flatten array into 1D**"
+      ],
+      "metadata": {
+        "id": "LqaaQQBEZ_05"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = np.array([[1, 2, 3],\n",
+        "              [4, 5, 6]])\n",
+        "\n",
+        "v = X.ravel()\n",
+        "print(v)"
+      ],
+      "metadata": {
+        "id": "NXYj7W-WaE7c",
+        "outputId": "ce064ff1-03fe-4494-d4ba-96a1bae9003b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "when converting:\n",
+        "\n",
+        "- Images to vectors\n",
+        "\n",
+        "- Feature maps to classifiers"
+      ],
+      "metadata": {
+        "id": "PleQ8SG2aJM7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**np.shape - Get dimensions of an array**"
+      ],
+      "metadata": {
+        "id": "givvrWxIaGtv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = np.array([[1, 2, 3],\n",
+        "              [4, 5, 6]])\n",
+        "\n",
+        "print(X.shape)"
+      ],
+      "metadata": {
+        "id": "PoaeXSPWaSaC",
+        "outputId": "ff9b9135-0577-41a1-ca71-6d7fbbfaa572",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**np.size - Total number of elements**"
+      ],
+      "metadata": {
+        "id": "kN7LsKVqaTpz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(np.size(X))"
+      ],
+      "metadata": {
+        "id": "nDXmsRJmaY9I",
+        "outputId": "b3374183-de3d-4f32-f6d5-2a937edcb6ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Loss averaging\n",
+        "\n",
+        "- Data validation"
+      ],
+      "metadata": {
+        "id": "Gvcnai-Tac8V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 90% of bugs in ML come from wrong array shapes, not from wrong math. **use np.shape**"
+      ],
+      "metadata": {
+        "id": "jsQ3ZjB7aaUD"
+      }
     }
   ]
 }
